sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:23: error: 'while' expected but identifier found.
		fin=true;
                ^AlgGnomeSort:23: error: '(' expected but ';' found.
		fin=true;
                        ^AlgGnomeSort:25: error: ';' expected but 'while' found.
	} while (!fin)
          ^AlgGnomeSort:30: error: Unmatched closing brace '}' ignored here
}
^