sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	
var length = getNombreValeurs(); 
	var fin:Boolean = false;
	var i :Int=0;
	
	do
	{
		
		
		
			if(plusPetit(i,i+1) && plusPetit(i-1,i))
			{
				echange(i,i+1);
				
			}
			else if(plusPetit(i,i+1) && !plusPetit(i-1,i)){
				echange(i-1,i)
			}
			
		}
		fin=true;
		
	} while (!fin)
}
